# boardgame_llama

./: .gitignore  README.md
board/: pyproject.toml
core/: pyproject.toml
core/app/: .env
core/app/agents/query_engine/: agent.py
core/app/engine/: generate.py
core/app/engine/loaders/: __init__.py  file.py
