[tool]
[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = [ "Nestor Navarro <nestornav@gmail.com>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11"
llama-agents = "^0.0.3"
llama-index-embeddings-openai = "^0.1.10"
llama-index-llms-openai = "^0.1.23"
python-telegram-bot = "^21.7"
cachetools = "^5.5.0"

[tool.poetry.dependencies.llama-index-agent-openai]
version = "0.2.6"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
