[tool]
[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = [ "Nestor Navarro <nestornav@gmail.com>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.7"
cachetools = "^5.5.0"
llama-index = "0.10.55"
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
cryptography = "^44.0.0"

[tool.poetry.dependencies.llama-index-agent-openai]
version = "0.2.6"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
